# infer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/: api.py  browser.py  browserbase_driver.py  chromium_driver.py  confirm_h1.py  geico_idcard_api.py  main.py  map_docs.py  models.py  preflight.py  probe_doc.py  recon_login.py  release_sessions.py  sessions.py
backend/carriers/: geico.py  lm.py  registry.py
docs/: anti-bot-and-hosting.md
docs/superpowers/plans/: 2026-06-16-liberty-mutual-spike.md  2026-06-16-lm-webapp-selfhosted.md  2026-06-16-minimal-lm-webapp.md  2026-06-17-lm-bot-detection-stealth.md  2026-06-24-browser-automation-structure-phase1.md
docs/superpowers/specs/: 2026-06-16-liberty-mutual-spike-design.md  2026-06-16-minimal-lm-webapp-design.md  (+2 more)
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  pdfWorker.ts  usePolling.ts
frontend/src/components/: MfaPrompt.tsx  (+3 more)
spike/: browserbase.py  challenge.py  config.py  docfetch.py  gate.py  timing.py
spike/carriers/: liberty_mutual.py
tests/: test_browserbase_params.py  test_challenge.py  test_config.py  test_docfetch.py  test_gate.py  test_lm_docdiscovery.py  test_lm_pagestate.py  test_timing.py
tests/backend/: test_api.py  test_app_wiring.py  test_browser.py  test_carrier_launch_args.py  test_cors.py  test_fake_driver.py  test_geico_idcard_api.py  test_health.py  test_manager_failures.py  test_manager_happy.py  test_manager_mfa.py  test_manager_streaming.py  test_models.py  test_registry.py  test_session_reuse.py  test_spa_serving.py
(+11 files in other folders)
