[project]
name = "infer-spike"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "browserbase>=1.13.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

# The browserbase SDK may not ship type stubs; don't let strict mode fail on it.
[[tool.mypy.overrides]]
module = ["browserbase.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
