[project]
name = "infer-spike"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "browserbase>=1.13.0",
    "fastapi>=0.137.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

# The browserbase SDK may not ship type stubs; don't let strict mode fail on it.
[[tool.mypy.overrides]]
module = ["browserbase.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
